--- a/index.html
+++ b/index.html
@@ -35,5 +35,6 @@
     </head>
     <body>
       <script src="sketch.js"></script>
+      <script src="js/food.js"></script>
     </body>
   </html>
